--- a/allifmaalcommonapp/templates/allifmaalcommonapp/companies/companies.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/companies/companies.html
@@ -6,8 +6,8 @@
 {% block style %}
 {%endblock%}
 {% block body %}
-
-<div class="allifmaincontainer">
+<div class="allifmaal-main-container">
+ 
   <!--start....main headere-->
 <div class="card-header">
   <div class="row mt-12" ><!--start....header row-->
@@ -108,8 +108,8 @@
     </div><!--end....header column-->
     </div><!--end....header row-->
   </div><!--end....main headere-->
-
-  <div class="allif-content-spacer"></div>
+  
+    <div class="allifmaincontainer">
   
   {% if clicked_row_data %}
   
@@ -237,6 +237,7 @@
 
 </div>
 </div>
+
   {% block scripts %}
  
   {% endblock %}
