--- a/allifmaalcommonapp/templates/allifmaalcommonapp/companies/edit-entity.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/companies/edit-entity.html
@@ -6,10 +6,8 @@
 {% block style %}
 {%endblock%}
 {% block body %}
-
-<div class="allifmaincontainer">
-  
-
+<div class="allifmaal-main-container">
+ 
 <!--start....main headere-->
 <div class="card-header">
 
@@ -63,9 +61,8 @@
     </div><!--end....header row-->
   
   </div><!--end....main headere-->
-      
-
-  <div class="allif-content-spacer"></div>
+   
+    <div class="allifmaincontainer">
   <div class="row mt-12"> <!--start....table row-->
     <div class="col-md-12"><!--start of the first row body-->
         <div class="allif-form-container">
@@ -116,7 +113,7 @@
 
 
 </div><!--end of main container of the page....-->
-
+</div>
   {% block scripts %}
 
   {% endblock %}
