--- a/allifmaalcommonapp/templates/allifmaalcommonapp/departments/add-department.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/departments/add-department.html
@@ -7,9 +7,8 @@
 {%endblock%}
 {% block body %}
 
-
-<div class="allifmaincontainer">
-  
+<div class="allifmaal-main-container">
+ 
 <!--start....main headere-->
 <div class="card-header">
 
@@ -33,11 +32,7 @@
 
 </div><!--end....main headere-->
 
-
-<!--start of main body-->
-
-
-<div class="allif-content-spacer"></div>
+  <div class="allifmaincontainer">
 <div class="row mt-12"> <!--start....table row-->
   <div class="table-details-content-description">Add/Edit New Department</div>
   <form method='POST' action=''>{% csrf_token %}
@@ -164,7 +159,7 @@
 
 </div><!--end of main container of the page....-->
 
-
+</div>
 </div>
   {% block scripts %}
 
