--- a/allifmaalcommonapp/templates/allifmaalcommonapp/departments/delete-dept-confirm.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/departments/delete-dept-confirm.html
@@ -7,8 +7,8 @@
 {%endblock%}
 {% block body %}
 
-<div class="allifmaincontainer">
-  
+<div class="allifmaal-main-container">
+ 
 <!--start....main headere-->
 <div class="card-header">
 
@@ -27,11 +27,7 @@
 
 </div><!--end....main headere-->
 
-
-<!--start of main body-->
-<div class="allif-content-spacer"></div>
-
-
+  <div class="allifmaincontainer">
 <div class="row mt-12"> <!--start....table row-->
   <div class="delete-confirmation-header">Do you want to delete {{allifquery}}?</div>
   <div class="col-md-12"> <!--start....table column-->
@@ -193,7 +189,7 @@
 </div><!--end of main container of the page....-->
 
 </div>
-
+</div>
   {% block scripts %}
 
   {% endblock %}
