--- a/allifmaalcommonapp/templates/allifmaalcommonapp/departments/department-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/departments/department-details.html
@@ -6,9 +6,8 @@
 {% block style %}
 {%endblock%}
 {% block body %}
-
-<div class="allifmaincontainer">
-  
+<div class="allifmaal-main-container">
+ 
 <!--start....main headere-->
 <div class="card-header">
 
@@ -44,9 +43,7 @@
 
 </div><!--end....main headere-->
 
-
-<!--start of main body-->
-<div class="allif-content-spacer"></div>
+  <div class="allifmaincontainer">
 <div class="row mt-12"> <!--start....table row-->
   <div class="table-details-content-description">{{allifquery}} Details</div>
   <div class="col-md-12"> <!--start....table column-->
@@ -202,7 +199,7 @@
 </div><!--end....table row-->
 
 </div>
-
+</div>
   {% block scripts %}
 
   {% endblock %}
