--- a/allifmaalcommonapp/templates/allifmaalcommonapp/filters/filters.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/filters/filters.html
@@ -7,7 +7,8 @@
 {%endblock%}
 {% block body %}
 
-<div class="allifmaincontainer">
+<div class="allifmaal-main-container">
+ 
   <!--start....main headere-->
 <div class="card-header">
   <div class="row mt-12" ><!--start....header row-->
@@ -39,8 +40,8 @@
     </div><!--end....header column-->
     </div><!--end....header row-->
   </div><!--end....main headere-->
-
-  <div class="allif-content-spacer"></div>
+ 
+    <div class="allifmaincontainer">
 <div class="row mt-12"> <!--start....table row-->
   <div class="col-md-12"> <!--start....table column-->
   <div class="allif-scroll-table">
@@ -122,7 +123,7 @@
 
 
 </div>
-
+</div>
   {% block scripts %}
  
   {% endblock %}
