--- a/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/users/logged-in-user-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/users/logged-in-user-details.html
@@ -7,9 +7,8 @@
 {%endblock%}
 {% block body %}
 
-
-<div class="allifmaincontainer">
-  
+<div class="allifmaal-main-container">
+ 
 <!--start....main headere-->
 <div class="card-header">
 
@@ -76,10 +75,7 @@
 
 </div><!--end....main headere-->
 
-
-<!--start of main body-->
-
-<div class="allif-content-spacer"></div>
+<div class="allifmaincontainer">
 
 <div class="row mt-12"> <!--start....table row-->
   <div class="table-details-content-description">{{allifquery}} Details</div>
@@ -530,7 +526,7 @@
 
 </div>
 
-
+</div>
   {% block scripts %}
 
   {% endblock %}
