--- a/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/users/user-delete-confirm.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/users/user-delete-confirm.html
@@ -7,6 +7,8 @@
 {%endblock%}
 {% block body %}
 
+<div class="allifmaal-main-container">
+ 
 <div class="allifmaincontainer">
   
 <!--start....main headere-->
@@ -28,10 +30,7 @@
 </div><!--end....main headere-->
 
 
-<!--start of main body-->
-<div class="allif-content-spacer"></div>
-
-
+  <div class="allifmaincontainer">
 <div class="row mt-12"> <!--start....table row-->
   <div class="delete-confirmation-header">Do you want to delete {{allifquery}}?</div>
   <div class="col-md-12"> <!--start....table column-->
@@ -179,7 +178,7 @@
 </div><!--end of main container of the page....-->
 
 </div>
-
+</div>
   {% block scripts %}
 
   {% endblock %}
