--- a/allifmaalcommonapp/templates/allifmaalcommonapp/taxes/taxes.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/taxes/taxes.html
@@ -1,4 +1,3 @@
-
 {% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
 {% load humanize %}
 {% block title %}
@@ -39,66 +38,100 @@
 
   <div class="allif-content-spacer"></div>
 
-  
 <div class="row mt-12"> <!--start....table row-->
   <div class="col-md-4"> <!--start....table column-->
+        <div class="card-header">
+          <div class="container-fluid amel-content-header">
+            <div class="dropdown allifmaal-content-dropdown">
+              <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+              Open Form
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                <div class="content-dropdown-menu">
+                <form method='POST' action=''>{% csrf_token %}
+                <li><a class="dropdown-item">Add New Tax Parameter</a></li>
+                <label>Tax Name</label> {{form.taxname}} 
+                <label>Tax Description</label> {{form.taxdescription}} 
+                <label>Tax Rate</label>{{form.taxrate}}
+                <label>Tax Type </label> {{form.taxtype}}
+                <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn">
+              </form>
+              </div>
+              </ul>
+            </div>
+          </div>
+          </div><!--end....main headere-->
+
+          {% if update %}
+  
+  
+<div class="allif-form-container">
+  <div class="table-content-description"> Add New Tax Rate </div>
+  <div class="allif-scroll-table">
+    <div class="table-responsive allif-full-table">
+    <table class="table table-layout">
+     
+      <tbody class="allif-table-body">
+        <form method='POST' action=''>{% csrf_token %}
+      <tr>
+        
+        <td>Tax Name</td>
+        <td>{{form.taxname}}</td>
+        </tr>
+        <tr>
+          <td>Description</td>
+       
+        <td>{{form.taxdescription}}</td>
+        </tr>
+        <tr>
+          <td>Rate</td>
+        <td>{{form.taxrate}}</td>
+        </tr>
+        <tr>
+          <td>Type</td>
+        <td>{{form.taxtype}}</td>
+        </tr>
+        <tr>
+          <td>Action</td>
+        
+         <td><input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
+         
+        
+      </tr>
+      </form>
+      </tbody>
+    </table>
+    </div>
+   </div>
+    </div><!--end of row div --->
+    {% else %}
+    <div class="allif-content-spacer"></div>
     <div class="allif-scroll-table">
       <div class="table-responsive allif-full-table">
       <table class="table table-layout">
         <thead>
           <tr class="allif-table-header-row">
           <td class="allif-fix-table-col">Tax Name</td>
-        
-          <td>Tax Description</td>
           <td>Rate %</td>
-          <td>Type</td>
-          
-          <td>Navigate</td>
-          
-          <td> . . . </td>
-          <td></td>
           </tr>
           </thead>
           <tbody class="allif-table-body">
            
-          
-          {% for item in allifqueryset %} 
+          {% for item in latest %} 
           <tr data-id="{{item.id}}">
           <td class="allif-fix-table-col"><a class="allif-table-links" href="">{{item.taxname}}</a></td>
-         
-         <td> {{item.taxdescription}}</td>
         
          <td> {{item.taxrate}}</td>
-         <td> {{item.taxtype}}</td>
         
-          <td>
-            <div class="dropdown allifmaal-content-dropdown">
-              <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
-              <div class="dropdown-content">
-                <a href="{% url 'allifmaalcommonapp:CommonUpdateTaxDetails' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
-                <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item </a>
-                
-              </div>
-            </div>
-            <div class="dropdown allif-confirm-action">
-              
-              <a href="{% url 'allifmaalcommonapp:commonAddCompanyScope' user_var glblslug %}" id="allif-confirm-delete">No</a><span><strong> | </strong></span>
-              <a href="{% url 'allifmaalcommonapp:commonWantToDeleteTaxParameter' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
-            </div>
-  
-  
-  
-          </td>
-  
-         <td> . . . </td>
-         <td></td>
         </tr>
         {% endfor %}
         </tbody>
       </table>
       </div>
      </div>
-  
+
+    {% endif %}
+    
   </div><!--end....table column-->
 
 
@@ -164,6 +197,8 @@
 
 </div><!--end....table row-->
 
+<div class="row mt-12"> <!--start....table row-->
+<div class="col-md-12"> <!--start....table column-->
 <div class="allif-form-container">
 <div class="table-content-description"> Add New Tax Rate </div>
 <div class="allif-scroll-table">
@@ -175,7 +210,7 @@
       <td>Tax Description</td>
       <td>Tax Rate %</td>
       <td>Tax Type</td>
-      <td></td>
+      <td>Action</td>
       <td></td>
       </tr>
       </thead>
@@ -196,164 +231,9 @@
   </div>
  </div>
   </div><!--end of row div --->
-
-
-
-  <hr>
-  <div class="card-header">
-    <div class="container-fluid amel-content-header">
-      <div class="dropdown allifmaal-content-dropdown">
-        <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-        Open Form
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-          <div class="content-dropdown-menu">
-          <form method='POST' action=''>{% csrf_token %}
-          <li><a class="dropdown-item">Add New Tax Parameter</a></li>
-          <label>Tax Name</label> {{form.taxname}} 
-          <label>Tax Description</label> {{form.taxdescription}} 
-          <label>Tax Rate</label>{{form.taxrate}}
-          <label>Tax Type </label> {{form.taxtype}}
-          <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn">
-        </form>
-        </div>
-        </ul>
-      </div>
-      <!-- Button trigger modal -->
-      <a type="button"  data-bs-toggle="modal" data-bs-target="#staticBackdrop"> Add New Tax </a>
-    </div>
-    </div><!--end....main headere-->
-
-    
-
-
-
-    {% if update %}
-    <hr>
-    <form method='POST' action=''>{% csrf_token %}
-      <div class="card shadow text-left p-3 allif-form-card" >
-      <label>Tax Name</label> {{form.taxname}} 
-      <label>Tax Description</label> {{form.taxdescription}} 
-      <label>Tax Rate</label>{{form.taxrate}}
-      <label>Tax Type </label> {{form.taxtype}}
-      <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn">
-      
-      </div>
-      <hr>
-  </form>
-  {% else %}
-
-
-
-  <hr>
-  <div class="allif-scroll-table">
-    <!--start of the table-->
-        
-        <table class="table table-layout">
-        <thead>
-        <tr class="allif-table-header-row">
-        
-        <td>Rate %</td>
-        <td>Type</td>
-        </tr>
-    </thead>
-    <tbody class="allif-table-body">
-
-{% for item in latest %}
-    <tr>
-
-
-<td> {{item.taxrate}}</td>
-<td> {{item.taxtype}}</td>
-
-    </tr>
-
-        {% endfor %}
-
-    </tbody>
-    </table>
-   
-    <!--end of table-->
-        </div>
-  {% endif %}
-
-  {% if allifquerydelete %}
-          
-         
-  <div class="row mt-9"> <!--start....table row-->
-    <div class="delete-confirmation-header"> Do you want to delete {{allifquerydelete}}?</div>
-<div class="allif-details-container">
-  
-  <div class="row"><!--start of row div --->
-    <!--start of column two-->
-    <div class="col-md-4">
-      <div class="delete-options-container">
-        <a href="{% url 'allifmaalcommonapp:commonTaxParameters' user_var glblslug %}">No</a>
-      </div>
-    </div>
-
- 
-  <!--start of column two-->
-  <div class="col-md-4">
-    <div class="delete-options-container">
-    
-        <a href="{% url 'allifmaalcommonapp:commonTaxParameters' user_var glblslug %}">Back</a>
-
-        
-    </div>
-        </div>
-  
-
-        <!--start of column two-->
-        <div class="col-md-4">
-          <div class="delete-options-container-delete">
-            <a href="{% url 'allifmaalcommonapp:CommonDeleteTaxParameter' allifquerydelete.id user_var glblslug %}">Yes</a></li>
-            
-        </div>
-      </div>
-        
-        </div><!--end of row div --->
-          
-            </div>
-
-    </div><!--end....table row-->
-    {% endif %}
-
-
-    
-  
-<!-- start of modal section-->
-<!-- Modal -->
-<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title text-center" id="staticBackdropLabel">Add Tax Parameter</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <form method='POST' action=''>{% csrf_token %}
-          <div class="card shadow text-left p-3 allif-form-card" >
-          <label>Tax Name</label> {{form.taxname}} 
-          <label>Tax Description</label> {{form.taxdescription}} 
-          <label>Tax Rate</label>{{form.taxrate}}
-          <label>Tax Type </label> {{form.taxtype}}
-          <div class="allif-content-spacer"></div>
-          <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn">
-          </div>
-      </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-success allifmaal-submit-btn" data-bs-dismiss="modal">Close</button>
-      </div>
-    </div>
   </div>
-</div>
- <!--end of modal section-->
- <hr>
-
-
-
+  </div>
+ 
 </div>
 
   {% block scripts %}
