--- a/allifmaalcommonapp/templates/allifmaalcommonapp/branches/branch-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/branches/branch-details.html
@@ -7,9 +7,8 @@
 {%endblock%}
 {% block body %}
 
-
-<div class="allifmaincontainer">
-  
+<div class="allifmaal-main-container">
+ 
 <!--start....main headere-->
 <div class="card-header">
 
@@ -45,9 +44,7 @@
 
 </div><!--end....main headere-->
 
-<div class="allif-content-spacer"></div>
-<!--start of main body-->
-
+  <div class="allifmaincontainer">
 <div class="row mt-12"> <!--start....table row-->
   <div class="table-details-content-description">{{allifquery}} Details</div>
   <div class="col-md-12"> <!--start....table column-->
@@ -275,7 +272,7 @@
 
 </div>
 
-
+</div>
   {% block scripts %}
 
   {% endblock %}
