--- a/allifmaalcommonapp/templates/allifmaalcommonapp/branches/branches.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/branches/branches.html
@@ -6,8 +6,8 @@
 {% block style %}
 {%endblock%}
 {% block body %}
-
-<div class="allifmaincontainer">
+<div class="allifmaal-main-container">
+ 
   <!--start....main headere-->
 <div class="card-header">
   <div class="row mt-12" ><!--start....header row-->
@@ -44,8 +44,8 @@
     </div><!--end....header column-->
     </div><!--end....header row-->
   </div><!--end....main headere-->
-
-  <div class="allif-content-spacer"></div>
+  
+    <div class="allifmaincontainer">
 <div class="row mt-12"> <!--start....table row-->
   <div class="col-md-12"> <!--start....table column-->
   <div class="allif-scroll-table">
@@ -136,7 +136,7 @@
 </div><!--end....table row-->
 
 </div>
-
+</div>
   {% block scripts %}
  
   {% endblock %}
