--- a/allifmaalcommonapp/templates/allifmaalcommonapp/divisions/add-division.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/divisions/add-division.html
@@ -6,9 +6,8 @@
 {% block style %}
 {%endblock%}
 {% block body %}
-
-<div class="allifmaincontainer">
-  
+<div class="allifmaal-main-container">
+ 
 <!--start....main headere-->
 <div class="card-header">
 
@@ -33,11 +32,7 @@
 
 </div><!--end....main headere-->
 
-
-<!--start of main body-->
-
-<div class="allif-content-spacer"></div>
-
+  <div class="allifmaincontainer">
 <div class="row mt-12"> <!--start....table row-->
   <div class="table-details-content-description">Add/Edit New Division</div>
   <form method='POST' action=''>{% csrf_token %}
@@ -137,6 +132,7 @@
 </div><!--end of main container of the page....-->
 
 
+</div>
 </div>
   {% block scripts %}
 
