--- a/allifmaalcommonapp/templates/allifmaalcommonapp/divisions/division-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/divisions/division-details.html
@@ -6,9 +6,8 @@
 {% block style %}
 {%endblock%}
 {% block body %}
+<div class="allifmaal-main-container">
 
-<div class="allifmaincontainer">
-  
 <!--start....main headere-->
 <div class="card-header">
 
@@ -44,9 +43,7 @@
 
 </div><!--end....main headere-->
 
-<div class="allif-content-spacer"></div>
-<!--start of main body-->
-
+  <div class="allifmaincontainer">
 <div class="row mt-12"> <!--start....table row-->
   <div class="table-details-content-description">{{allifquery}} Details</div>
   <div class="col-md-12"> <!--start....table column-->
@@ -269,7 +266,7 @@
 </div><!--end....table column-->
 
 </div><!--end....table row-->
-
+</div>
 </div>
   {% block scripts %}
 
