--- a/allifmaalcommonapp/templates/allifmaalcommonapp/docformats/docformats.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/docformats/docformats.html
@@ -6,7 +6,8 @@
 {% block style %}
 {%endblock%}
 {% block body %}
-<div class="allifmaincontainer">
+<div class="allifmaal-main-container">
+ 
   <!--start....main headere-->
 <div class="card-header">
   <div class="row mt-12" ><!--start....header row-->
@@ -38,7 +39,8 @@
     </div><!--end....header column-->
     </div><!--end....header row-->
   </div><!--end....main headere-->
-  <div class="allif-content-spacer"></div>
+  
+    <div class="allifmaincontainer">
 <div class="row mt-12"> <!--start....table row-->
   <div class="col-md-12"> <!--start....table column-->
   <div class="allif-scroll-table">
@@ -120,7 +122,7 @@
   </div><!--end of row div --->
 
 </div>
-
+</div>
   {% block scripts %}
  
   {% endblock %}
