--- a/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/profiles/profile-delete-confirm.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/profiles/profile-delete-confirm.html
@@ -6,9 +6,8 @@
 {% block style %}
 {%endblock%}
 {% block body %}
-
-<div class="allifmaincontainer">
-  
+<div class="allifmaal-main-container">
+ 
 <!--start....main headere-->
 <div class="card-header">
 
@@ -31,10 +30,7 @@
 </div><!--end....main headere-->
 
 
-<!--start of main body-->
-<div class="allif-content-spacer"></div>
-
-
+  <div class="allifmaincontainer">
 <div class="row mt-12"> <!--start....table row-->
   <div class="delete-confirmation-header">Do you want to delete {{allifquery}}?</div>
   <div class="col-md-12"> <!--start....table column-->
@@ -182,7 +178,7 @@
 </div><!--end of main container of the page....-->
 
 </div>
-
+</div>
   {% block scripts %}
 
   {% endblock %}
