--- a/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/profiles/profile-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/profiles/profile-details.html
@@ -7,8 +7,7 @@
 {%endblock%}
 {% block body %}
 
-
-<div class="allifmaincontainer">
+<div class="allifmaal-main-container">
   
 <!--start....main headere-->
 <div class="card-header">
@@ -72,14 +71,8 @@
     </div><!--end....header column-->
   
   </div><!--end....header row-->
-
-</div><!--end....main headere-->
-
-
-<!--start of main body-->
-
-<div class="allif-content-spacer"></div>
-
+ </div>
+    <div class="allifmaincontainer">
 <div class="row mt-12"> <!--start....table row-->
   <div class="table-details-content-description">{{allifquery}} Details</div>
   <div class="col-md-12"> <!--start....table column-->
@@ -248,7 +241,7 @@
 
 </div>
 
-
+</div>
   {% block scripts %}
 
   {% endblock %}
