--- a/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/staff/staff.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/staff/staff.html
@@ -6,8 +6,9 @@
 {% block style %}
 {%endblock%}
 {% block body %}
+<div class="allifmaal-main-container">
+  <div class="allifmaincontainer">
 
-<div class="allifmaincontainer">
   <!--start....main headere-->
 <div class="card-header">
   <div class="row mt-12" ><!--start....header row-->
@@ -75,7 +76,8 @@
     </div><!--end....header column-->
     </div><!--end....header row-->
   </div><!--end....main headere-->
-
+  
+    <div class="allifmaincontainer">
   <div class="allif-content-spacer"></div>
   
   {% if clicked_row_data %}
@@ -201,6 +203,7 @@
 </div><!--end....table row-->
 
 
+</div>
 </div>
 </div>
   {% block scripts %}
