--- a/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sector-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sector-details.html
@@ -6,7 +6,7 @@
 {% block style %}
 {%endblock%}
 {% block body %}
-
+<div class="allifmaal-main-container">
 <div class="allifmaincontainer">
   <!--start....main headere-->
 <div class="card-header">
@@ -50,7 +50,8 @@
     </div><!--end....header row-->
   
   </div><!--end....main headere-->
-
+  
+  <div class="allifmaincontainer">
   <div class="allif-content-spacer"></div>
   <div class="row mt-12"> <!--start....table row-->
     <div class="table-details-content-description">{{allifquery}} Details</div>
@@ -126,7 +127,7 @@
   
   </div><!--end of main container of the page....-->
 </div>
-
+</div>
   
   {% block scripts %}
  
