--- a/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sectors.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sectors.html
@@ -6,8 +6,8 @@
 {% block style %}
 {%endblock%}
 {% block body %}
+<div class="allifmaal-main-container">
 
-<div class="allifmaincontainer">
   <!--start....main headere-->
 <div class="card-header">
   <div class="row mt-12" ><!--start....header row-->
@@ -39,6 +39,7 @@
     </div><!--end....header column-->
     </div><!--end....header row-->
   </div><!--end....main headere-->
+  <div class="allifmaincontainer">
   <div class="allif-content-spacer"></div>
   <div class="row mt-12"> <!--start....table row-->
     <div class="col-md-12"> <!--start....table column-->
@@ -242,7 +243,7 @@
 </script>
 </div>
 
-
+</div>
 
 </div>
   {% block scripts %}
